kubeflow-deployments/private-blueprint/.build/kubeflow-apps/networking.istio.io_v1alpha3_virtualservice_argo-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-ui
  namespace: kubeflow
  labels:
    app.kubernetes.io/component: argo
    app.kubernetes.io/name: argo
    kustomize.component: argo
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /argo/
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 80
        host: argo-ui.kubeflow.svc.cluster.local
